# ATM_Projekt_CPP

./: .gitignore  CMakeLists.txt
headers/: ATM.h  Account.h  AccountWindow.h  BankSystem.h  KeypadWidget.h  LoginResult.h  MainWindow.h  TransactionLog.h  WithdrawResult.h
relase/: CMakeCache.txt
source/: ATM.cpp  Account.cpp  AccountWindow.cpp  BankSystem.cpp  KeypadWidget.cpp  MainWindow.cpp  TransactionLog.cpp  accounts.txt  atm.txt  main.cpp
